crates/atlas-cli/tests/snapshots/typecheck_dump_tests__typecheck_dump_function_with_local_vars.snap
---
source: crates/atlas-cli/tests/typecheck_dump_tests.rs
expression: json
---
{
  "typecheck_version": 1,
  "symbols": [
    {
      "name": "calculate",
      "kind": "function",
      "start": 4,
      "end": 13,
      "type": "(number) -> number",
      "mutable": false
    }
  ],
  "types": [
    {
      "name": "(number) -> number",
      "kind": "function",
      "details": "signature: (number) -> number"
    },
    {
      "name": "number",
      "kind": "primitive"
    }
  ]
}
