crates/atlas-cli/tests/snapshots/typecheck_dump_tests__typecheck_dump_simple_variable.snap
---
source: crates/atlas-cli/tests/typecheck_dump_tests.rs
expression: json
---
{
  "typecheck_version": 1,
  "symbols": [
    {
      "name": "x",
      "kind": "variable",
      "start": 4,
      "end": 5,
      "type": "number",
      "mutable": false
    }
  ],
  "types": [
    {
      "name": "number",
      "kind": "primitive"
    }
  ]
}
